# desafio-senior-backend-developer

./: .env.desafio  .env.dev  .env.prod  .pre-commit-config.yaml  404.html  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  secret_key.py  test.db
.github/workflows/: test.yml
about/: index.html
alembic/: env.py
alembic/versions/: 3e5341c2d57e_migration_inicial.py  cfbaa991f746_migration_inicial.py
backend/: Dockerfile  database.py  main.py  pyproject.toml
backend/chat/: __init__.py  chatbot.py
backend/crud/: __init__.py  crud_documento.py  crud_rl_usuario_documento.py  crud_transacao_carteira.py  crud_transporte.py  crud_usuario.py
backend/model/: __init__.py  models_dim_documento.py  models_dim_tipo_transacao.py  models_dim_transporte.py  models_dim_usuario.py  models_fat_transacao_carteira.py  models_rl_usuario_documento.py  relationship.py
backend/router/: __init__.py  router_auth.py  router_chatbot.py  router_documento.py  router_test_backend.py  router_transacao.py  router_transporte.py  router_usuario.py
backend/schema/: __init__.py  schema_dim_documento.py  schema_dim_tipo_transacao.py  schema_dim_transporte.py  schema_dim_usuario.py  schema_fat_transacao_carteira.py
backend/tests/: conftest.py  test_auth.py  test_documento_usuario.py  test_transacao.py  test_usuario.py
backend/utils/: __init__.py  auth.py  init_db.py  pydantic_validator.py  seeds_db.py
docs/: about.md  index.md  project.md
hooks/: docker-tests.sh
project/: index.html
scripts/: start-dev.sh  start-prod.sh  start.sh  stop-dev.sh  stop-prod.sh  stop.sh
tests/: conftest.py  test_auth.py  test_documento.py  test_documento_usuario.py  test_transacao.py
